--- a/src/components/AbilityCard/AbilityCard.css
+++ b/src/components/AbilityCard/AbilityCard.css
@@ -6,10 +6,9 @@
     text-align: center;
     color: white;
     border: 10px;
-    padding-top: 20px;
     
   }
-.spellCard {
+.abilityCard {
 
     justify-content: center;
     text-align: center;
@@ -23,7 +22,7 @@
     border: 5px;
    }
 
-   .spellText {
+   .abilityText {
     font-family: 'Oswald', sans-serif;  
     position: absolute;
     position: absolute;
@@ -35,14 +34,12 @@
 
   }
 
-  .spellTitle {
+  .abilityTitle {
       font-size: 30px;
       font-family: 'Oswald', sans-serif;  
     }
 
 p {
     font-family: 'Oswald', sans-serif;  
-    font-size: 12px;
-
 
 }
