--- a/src/components/SpellCard/SpellCard.css
+++ b/src/components/SpellCard/SpellCard.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&display=swap');
 
-.container {
+.spellCard-container {
     position: relative;
     text-align: center;
     color: white;
     border: 10px;
     padding-top: 20px;
+    width: 100%;
+ 
     
   }
 .spellCard {
