--- a/src/components/CharNavBar/CharNavBar.css
+++ b/src/components/CharNavBar/CharNavBar.css
@@ -27,6 +27,7 @@
       top: 0;
       left: -100%;
       transition: 850ms;
+      z-index: 1;
   }
 
   .nav-menu.active {
@@ -56,8 +57,11 @@
   }
 
   .nav-text a:hover {
-      background-color: aquamarine;
-  }
+    background-color: rgb(0, 0, 0);
+    color: white;
+    transition: .75s;
+    transform: scale(1.2);
+}
 
   .nav-menu-items {
       width: 100%;
