--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -7,6 +7,8 @@
     
   }
 
+
+
   .menu-bars {
       margin-left: 2rem;
       background: none;
@@ -23,6 +25,7 @@
       top: 0;
       left: -100%;
       transition: 850ms;
+      z-index: 1;
   }
 
   .nav-menu.active {
@@ -52,8 +55,11 @@
   }
 
   .nav-text a:hover {
-      background-color: aquamarine;
-  }
+    background-color: rgb(0, 0, 0);
+    color: white;
+    transition: .75s;
+    transform: scale(1.2);
+}
 
   .nav-menu-items {
       width: 100%;
